edits ookmark list spacing a bit more and adds correct font family to headers

--- a/src/components/BookmarkList/BookmarkList.module.scss
+++ b/src/components/BookmarkList/BookmarkList.module.scss
@@ -13,6 +13,13 @@
   padding: 0;
 }
 
-.bmListTable th {
+.bmListHeader th {
+  padding: 0px;
+  padding-bottom: 9px;
+  font-family: 'Sharp Sans';
+}
+
+.bmListTable th,
+.bmListHeader th:first-child {
   padding-left: 30px;
 }
